homepage.css
.nav-item {
	color: white !important;
}

.bg-1 { 
	padding-top: 12em;
	padding-bottom: 12em;
	color: #ffffff;
	font-family: 'Open Sans', sans-serif;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-repeat:no-repeat;
	background: -webkit-linear-gradient(#ff6a00, #ee0979);
	background: -moz-linear-gradient(#ff6a00, #ee0979);
	background: -ms-linear-gradient(#ff6a00, #ee0979);
	background: -o-linear-gradient(#ff6a00, #ee0979);
	background: linear-gradient(#ff6a00, #ee0979);
}

.icon-padding {
	padding-left: 20px;
	padding-right: 20px;
}

.button-mid {
	padding-left: 2em;
	padding-right: 2em;
	margin-left: 20px;
	margin-right: 20px;
	margin-top: 40px;
	color: white !important;
}

.nav-button {
	color: white !important;
	border-color: white !important;
}

.navbar-bottom {
	color: white !important;
}

.pill-space {
	margin-right: 20px;
	margin-left: 20px;
	padding-left: 2em !important;
	padding-right: 2em !important;
}

.footer-background {
	background-color: #343a40;
	color: white;
}

i {
	color: white;
}

